@@ -1,4 +1,7 @@
-# This Build.PL for Text-MarkdownTable was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
+# This Build.PL for Text-MarkdownTable was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.007.
+use strict;
+use warnings;
+
 use v5.10.0;
-use Module::Build::Tiny 0.036;
+use Module::Build::Tiny 0.038;
 Build_PL();
