@@ -1,10 +1,10 @@
 {
    "abstract" : "Write Markdown syntax tables from data",
    "author" : [
-      "Jakob Voß"
+      "Jakob Voß <jakob.voss@gbv.de>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.5, Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.141520",
+   "generated_by" : "Dist::Milla version v1.0.8, Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142060",
    "license" : [
       "perl_5"
    ],
@@ -26,11 +26,12 @@
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "Module::Build::Tiny" : "0.036"
+            "Module::Build::Tiny" : "0.038"
          }
       },
       "develop" : {
          "requires" : {
+            "Dist::Milla" : "v1.0.8",
             "Test::Pod" : "1.41"
          }
       },
@@ -54,9 +55,11 @@
          "web" : "https://github.com/nichtich/Text-MarkdownTable"
       }
    },
-   "version" : "0.2.3",
+   "version" : "0.2.4",
    "x_contributors" : [
-      "Jakob Voss <voss@gbv.de>"
+      "Jakob Voss <jakob@nichtich.de>",
+      "Jakob Voss <voss@gbv.de>",
+      "Patrick Hochstenbach <patrick.hochstenbach@ugent.be>"
    ]
 }
 
