@@ -1,5 +1,1 @@
-name             = Text-MarkdownTable
-author           = Jakob Voß
-copyright_holder = Jakob Voß
-license          = Perl_5
 [@Milla]
