@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - fixed undefined $_ in simple.t test (Patrick Hochstenbach)
 
 0.2.3  2014-07-16 09:45:11 CEST
     - improved performance by using printf
